# Glassbox-AI-2.0-Mechanistic-Interpretability-tool

./: .gitignore  .vercelignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Doc  Dockerfile  LICENSE  LICENSE-COMMERCIAL  METHODOLOGY.md  NOTICE  PATENTS.md  README.md  SECURITY.md  action.yml  department_roadmap.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt  vercel.json
.github/workflows/: deploy_hf.yml  glassbox-audit.yml  publish.yml  publish_mcp.yml  sbom.yml  tests.yml  vercel_status.yml
.railway/: config.json
.vercel/: project.json
api/: main.py
benchmarks/: run_all.py  run_geo.py  run_ioi.py  run_sva.py
dashboard/: app.py  compliance_dashboard.html
docs/: CNAME  index.html
examples/: 01_ioi_circuit.py
glassbox/: __init__.py  alignment.py  audit.py  audit_log.py  bias.py  causal_scrubbing.py  circuit_diff.py  cli.py  compliance.py  composition.py  core.py  cross_model.py  das.py  evidence_vault.py  explain.py  hessian.py  hf_integration.py  mlflow_integration.py  multi_arch.py  multiagent.py  notify.py  risk_register.py  sae_attribution.py  steering.py  utils.py  widget.py
glassbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp/: README.md  pyproject.toml  server.py
mcp/glassbox_mcp/: __init__.py  server.py
scripts/: benchmark.py  glassbox_ci_audit.py  patch_download_count.py  sync_versions.py
sdk/: glassbox.ts
tests/: conftest.py  test_compliance.py  test_engine.py
