[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "glassbox-mech-interp"
version         = "2.1.0"
description     = "Open-source mechanistic interpretability for transformer models"
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "Ajay Pravin Mahale", email = "mahale.ajay01@gmail.com" }]
requires-python = ">=3.8"
keywords        = [
    "mechanistic-interpretability",
    "transformers",
    "circuits",
    "attribution-patching",
    "explainability",
    "XAI",
]
dependencies = [
    "torch>=2.0",
    "transformer_lens>=1.0",
    "einops",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage      = "https://github.com/designer-coderajay/Glassbox-AI-2.0-Mechanistic-Interpretability-tool"
Documentation = "https://designer-coderajay.github.io/Glassbox-AI-2.0-Mechanistic-Interpretability-tool/"
"Bug Tracker" = "https://github.com/designer-coderajay/Glassbox-AI-2.0-Mechanistic-Interpretability-tool/issues"
"HuggingFace" = "https://huggingface.co/spaces/designer-coderajay/Glassbox-ai"

[project.scripts]
glassbox-ai = "glassbox.cli:main"

[tool.setuptools.packages.find]
where = ["."]

# ---------------------------------------------------------------------------
# BUG FIX: pytest markers were not registered — Bug 6.
# Without this, @pytest.mark.slow generates warnings on every run.
# With --strict-marks in CI it becomes an ERROR.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow — skip in fast CI with '-m \"not slow\"'",
]
